# cmake-generator

./: README.adoc  crossdebug.html  requirements.txt
liba/: clean.sh  configure.sh  generate.sh  install-python.sh  install.sh  run-ctest.sh  run-exe.sh  run-python.sh
liba/A/AA/AAA/apps/: main.cpp
liba/A/AA/AAA/include/A/AA/AAA/: aaa.h  aaa2.h
liba/A/AA/AAA/src/: aaa.cpp  aaa2.cpp
liba/A/AA/AAA/swig/: aaa.i
liba/A/AA/AAB/include/A/AA/AAB/: aab.h
liba/A/AA/AAB/src/: aab.cpp
liba/A/AB/ABA/include/A/AB/ABA/: aba.h
liba/A/AB/ABB/include/A/AB/ABB/: abb.h
liba/A/AB/ABB/src/: abb.cpp
liba/B/BA/apps/: main2.cpp
liba/B/BA/include/B/BA/: ba.h  ba2.h  ba3.h
liba/B/BA/src/: ba.cpp  ba2.cpp
liba/B/BA/swig/: ba.i
liba/C/CA/CAA/include/C/CA/CAA/: caa.h
liba/python/: cmake_module.py  test.py
liba/scripts/: create_cmake_options.py.in  extra_libs.txt  generate_cmake.py  install.py.in  parse_includes.py  qt.py
liba/tests/apps/: test.cpp
libb/: CMakeLists.txt  build.sh  configure.sh
libb/apps/: main.cpp
